force-app/main/default/objects/Unidad_M_vil__c/Unidad_M_vil__c.object-meta.xml
<CustomObject>
    <label>Unidad Móvil</label>
    <nameField>
        <label>Nombre de Unidad Móvil</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unidades Móviles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>