force-app/main/default/objects/Unidad_M_vil__c/fields/Asesor_T_cnico__c.field-meta.xml
<CustomField>
    <fullName>Asesor_T_cnico__c</fullName>
    <label>Asesor Técnico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Julio Jonathan Cisneros</fullName>
            </value>
            <value>
                <fullName>Felipe Gabriel Noh Pool</fullName>
            </value>
            <value>
                <fullName>Sergio Arturo Quiñones Jiménez</fullName>
            </value>
            <value>
                <fullName>Luis Maximiliano Nava</fullName>
            </value>
            <value>
                <fullName>Gustavo Eduardo Calderón Caletti</fullName>
                <isActive>false</isActive>
                <label>Gustavo Eduardo Calderón Caletti</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>