force-app/main/default/objects/Unidad_M_vil__c/fields/Calle_y_N_mero__c.field-meta.xml
<CustomField>
    <fullName>Calle_y_N_mero__c</fullName>
    <label>Calle y Número</label>
    <length>150</length>
    <type>Text</type>
</CustomField>