force-app/main/default/objects/Unidad_M_vil__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Soporte a reclamaciones</inlineHelpText>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Unidades Móviles</relationshipLabel>
    <relationshipName>Unidades_M_viles</relationshipName>
    <type>Lookup</type>
</CustomField>