force-app/main/default/objects/Unidad_M_vil__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>30</length>
    <type>Text</type>
</CustomField>