force-app/main/default/objects/Unidad_M_vil__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <label>Colonia</label>
    <length>30</length>
    <type>Text</type>
</CustomField>