force-app/main/default/objects/Unidad_M_vil__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades Móviles</relationshipLabel>
    <relationshipName>Unidades_M_viles</relationshipName>
    <type>Lookup</type>
</CustomField>