force-app/main/default/objects/Unidad_M_vil__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Región Centro</fullName>
            </value>
            <value>
                <fullName>Región Centro Distribuidores</fullName>
            </value>
            <value>
                <fullName>Región Bajío</fullName>
            </value>
            <value>
                <fullName>Región Sureste</fullName>
            </value>
            <value>
                <fullName>Región Occidente</fullName>
            </value>
            <value>
                <fullName>Región Norte</fullName>
            </value>
            <value>
                <fullName>Región Noroeste</fullName>
            </value>
            <value>
                <fullName>Tiendas</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Especificadores</fullName>
            </value>
            <value>
                <fullName>Región Obra Pública</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>