force-app/main/default/objects/Unidad_M_vil__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Pendiente de Confirmación</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>No Procede</fullName>
            </value>
            <value>
                <fullName>Solicitud Confirmada</fullName>
            </value>
            <value>
                <fullName>Solicitud Atendida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>