force-app/main/default/objects/Unidad_M_vil__c/fields/Fin_del_Evento__c.field-meta.xml
<CustomField>
    <fullName>Fin_del_Evento__c</fullName>
    <label>Fin del Evento</label>
    <type>DateTime</type>
</CustomField>