force-app/main/default/objects/Unidad_M_vil__c/fields/Inicio_del_Evento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_del_Evento__c</fullName>
    <label>Inicio del Evento</label>
    <type>DateTime</type>
</CustomField>