force-app/main/default/objects/Unidad_M_vil__c/fields/Material_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Material_Adicional__c</fullName>
    <label>Material Adicional</label>
    <type>TextArea</type>
</CustomField>