force-app/main/default/objects/Unidad_M_vil__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Unidades Móviles</relationshipLabel>
    <relationshipName>Unidades_M_viles</relationshipName>
    <type>Lookup</type>
</CustomField>