force-app/main/default/objects/Unidad_M_vil__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>Pais</label>
    <length>30</length>
    <type>Text</type>
</CustomField>