force-app/main/default/objects/Unidad_M_vil__c/fields/Relaci_n_con_Imperquimia__c.field-meta.xml
<CustomField>
    <fullName>Relaci_n_con_Imperquimia__c</fullName>
    <label>Relación con Imperquimia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribuidor A</fullName>
            </value>
            <value>
                <fullName>Distribuidor B</fullName>
            </value>
            <value>
                <fullName>Distribuidor C</fullName>
            </value>
            <value>
                <fullName>Distribuidor D</fullName>
            </value>
            <value>
                <fullName>Contratistas A</fullName>
            </value>
            <value>
                <fullName>Contratistas B</fullName>
            </value>
            <value>
                <fullName>Contratistas C</fullName>
            </value>
            <value>
                <fullName>Multimarcas A</fullName>
            </value>
            <value>
                <fullName>Multimarcas B</fullName>
            </value>
            <value>
                <fullName>Multimarcas C</fullName>
            </value>
            <value>
                <fullName>Obras y Proyectos</fullName>
            </value>
            <value>
                <fullName>Industriales</fullName>
            </value>
            <value>
                <fullName>Exportación</fullName>
            </value>
            <value>
                <fullName>Mostrador</fullName>
            </value>
            <value>
                <fullName>Desarrollo de Negoci</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Aplicador A</fullName>
            </value>
            <value>
                <fullName>Contratistas Plus</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>