force-app/main/default/objects/Unidad_M_vil__c/fields/Servicio_que_requiere__c.field-meta.xml
<CustomField>
    <fullName>Servicio_que_requiere__c</fullName>
    <label>Servicio que requiere</label>
    <type>TextArea</type>
</CustomField>