force-app/main/default/objects/Unidad_M_vil__c/fields/Valor_de_la_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_la_Oportunidad__c</fullName>
    <formula>Oportunidad__r.ValorProyecto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de la Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>