force-app/main/default/objects/Unidad_M_vil__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Inicio_del_Evento__c</columns>
    <columns>Fin_del_Evento__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>