force-app/main/default/objects/Unidad_M_vil__c/listViews/Solicitudes_Pendientes.listView-meta.xml
<ListView>
    <fullName>Solicitudes_Pendientes</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Inicio_del_Evento__c</columns>
    <columns>Fin_del_Evento__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estatus__c</field>
        <operation>equals</operation>
        <value>Nuevo,Pendiente de Confirmación</value>
    </filters>
    <label>Solicitudes Pendientes</label>
</ListView>